Updated outdated Codegen script; Added new Params to Bag
