# rbb_server/src/rbb_swagger_server/models/bag_summary.py
@@ -16,7 +16,7 @@ class BagSummary(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, detail_type: str=None, name: str=None, store_data: object=None, discovered: datetime=None, extraction_failure: bool=None, in_trash: bool=None, is_extracted: bool=None, meta_available: bool=None, size: int=None, start_time: datetime=None, end_time: datetime=None, duration: float=None, messages: int=None, tags: List[Tag]=None):  # noqa: E501
+    def __init__(self, detail_type: str=None, name: str=None, store_data: object=None, discovered: datetime=None, extraction_failure: bool=None, in_trash: bool=None, is_extracted: bool=None, meta_available: bool=None, size: int=None, start_time: datetime=None, end_time: datetime=None, data_start_time: datetime=None, data_end_time: datetime=None, duration: float=None, data_duration: float=None, messages: int=None, tags: List[Tag]=None):  # noqa: E501
         """BagSummary - a model defined in Swagger
 
         :param detail_type: The detail_type of this BagSummary.  # noqa: E501
@@ -41,8 +41,14 @@ class BagSummary(Model):
         :type start_time: datetime
         :param end_time: The end_time of this BagSummary.  # noqa: E501
         :type end_time: datetime
+        :param data_start_time: The data_start_time of this BagSummary.  # noqa: E501
+        :type data_start_time: datetime
+        :param data_end_time: The data_end_time of this BagSummary.  # noqa: E501
+        :type data_end_time: datetime
         :param duration: The duration of this BagSummary.  # noqa: E501
         :type duration: float
+        :param data_duration: The data_duration of this BagSummary.  # noqa: E501
+        :type data_duration: float
         :param messages: The messages of this BagSummary.  # noqa: E501
         :type messages: int
         :param tags: The tags of this BagSummary.  # noqa: E501
@@ -60,7 +66,10 @@ class BagSummary(Model):
             'size': int,
             'start_time': datetime,
             'end_time': datetime,
+            'data_start_time': datetime,
+            'data_end_time': datetime,
             'duration': float,
+            'data_duration': float,
             'messages': int,
             'tags': List[Tag]
         }
@@ -77,7 +86,10 @@ class BagSummary(Model):
             'size': 'size',
             'start_time': 'start_time',
             'end_time': 'end_time',
+            'data_start_time': 'data_start_time',
+            'data_end_time': 'data_end_time',
             'duration': 'duration',
+            'data_duration': 'data_duration',
             'messages': 'messages',
             'tags': 'tags'
         }
@@ -93,7 +105,10 @@ class BagSummary(Model):
         self._size = size
         self._start_time = start_time
         self._end_time = end_time
+        self._data_start_time = data_start_time
+        self._data_end_time = data_end_time
         self._duration = duration
+        self._data_duration = data_duration
         self._messages = messages
         self._tags = tags
 
@@ -350,7 +365,7 @@ class BagSummary(Model):
     def end_time(self) -> datetime:
         """Gets the end_time of this BagSummary.
 
-        Start time of this bag.  # noqa: E501
+        End time of this bag.  # noqa: E501
 
         :return: The end_time of this BagSummary.
         :rtype: datetime
@@ -361,7 +376,7 @@ class BagSummary(Model):
     def end_time(self, end_time: datetime):
         """Sets the end_time of this BagSummary.
 
-        Start time of this bag.  # noqa: E501
+        End time of this bag.  # noqa: E501
 
         :param end_time: The end_time of this BagSummary.
         :type end_time: datetime
@@ -370,10 +385,56 @@ class BagSummary(Model):
         self._end_time = end_time
 
     @property
+    def data_start_time(self) -> datetime:
+        """Gets the data_start_time of this BagSummary.
+
+        Start time of useful data in this bag.  # noqa: E501
+
+        :return: The data_start_time of this BagSummary.
+        :rtype: datetime
+        """
+        return self._data_start_time
+
+    @data_start_time.setter
+    def data_start_time(self, data_start_time: datetime):
+        """Sets the data_start_time of this BagSummary.
+
+        Start time of useful data in this bag.  # noqa: E501
+
+        :param data_start_time: The data_start_time of this BagSummary.
+        :type data_start_time: datetime
+        """
+
+        self._data_start_time = data_start_time
+
+    @property
+    def data_end_time(self) -> datetime:
+        """Gets the data_end_time of this BagSummary.
+
+        End time of useful data in this bag.  # noqa: E501
+
+        :return: The data_end_time of this BagSummary.
+        :rtype: datetime
+        """
+        return self._data_end_time
+
+    @data_end_time.setter
+    def data_end_time(self, data_end_time: datetime):
+        """Sets the data_end_time of this BagSummary.
+
+        End time of useful data in this bag.  # noqa: E501
+
+        :param data_end_time: The data_end_time of this BagSummary.
+        :type data_end_time: datetime
+        """
+
+        self._data_end_time = data_end_time
+
+    @property
     def duration(self) -> float:
         """Gets the duration of this BagSummary.
 
-        duration of this bag in seconds.  # noqa: E501
+        Duration of this bag in seconds.  # noqa: E501
 
         :return: The duration of this BagSummary.
         :rtype: float
@@ -384,13 +445,36 @@ class BagSummary(Model):
     def duration(self, duration: float):
         """Sets the duration of this BagSummary.
 
-        duration of this bag in seconds.  # noqa: E501
+        Duration of this bag in seconds.  # noqa: E501
 
         :param duration: The duration of this BagSummary.
         :type duration: float
         """
 
         self._duration = duration
+
+    @property
+    def data_duration(self) -> float:
+        """Gets the data_duration of this BagSummary.
+
+        Duration of useful data in this bag in seconds.  # noqa: E501
+
+        :return: The data_duration of this BagSummary.
+        :rtype: float
+        """
+        return self._data_duration
+
+    @data_duration.setter
+    def data_duration(self, data_duration: float):
+        """Sets the data_duration of this BagSummary.
+
+        Duration of useful data in this bag in seconds.  # noqa: E501
+
+        :param data_duration: The data_duration of this BagSummary.
+        :type data_duration: float
+        """
+
+        self._data_duration = data_duration
 
     @property
     def messages(self) -> int:
